[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
[tool.setuptools]
include-package-data = true
[tool.setuptools.package-data]
[tool.setuptools.packages.find]
[project]
name = "spotifypackage"
authors = [ {name = "Ahmed Alhuraibi",
             email = "alhuraibia@gmail.com"}]

description = "Building Software Assignment"
version = "0.1.0"
dependencies = ["requests", "pandas", "numpy","pyyaml"]
requires-python = ">=3.9.0"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
]



